2011-09-18  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added ALICE_2011_S8909580 (strange particle production at 900 GeV)

	* Feed-down correction in ALICE_2011_S8945144

2011-09-16  Andy Buckley  <andy@insectnation.org>

	* Adding ATLAS track jet analysis, modified from the version
	provided by Seth Zenz: ATLAS_2011_I919017. Note that this analysis
	is currently using the Inspire ID rather than the Spires one:
	we're clearly going to have to update the API to handle Inspire
	codes, so might as well start now...

2011-09-14  Andy Buckley  <andy@insectnation.org>

	* Applying histogram dynamic_cast protection patch from Anton
	Karneyeu and Alex Grecu.

	* Adding the ATLAS Z pT measurement at 7 TeV (ATLAS_2011_S9131140)
	and an MC analysis for VH->bb events (MC_VH2BB).

2011-09-12  Andy Buckley  <andy@insectnation.org>

	* Removing uses of getLog, cout, cerr, and endl from all standard
	analyses and projections, except in a very few special cases.

2011-09-10  Andy Buckley  <andy@insectnation.org>

	* Changing the behaviour and interface of the MissingMomentum
	projection to calculate vector ET correctly. This was previously
	calculated according to the common definition of -E*sin(theta) of
	the summed visible 4-momentum in the event, but that is incorrect
	because the timelike term grows monotonically. Instead, transverse
	2-vectors of size ET need to be constructed for each visible
	particle, and vector-summed in the transverse plane.

	The rewrite of this behaviour made it opportune to make an API
	improvement: the previous method names scalarET/vectorET() have
	been renamed to scalar/vectorEt() to better match the Rivet
	FourMomentum::Et() method, and MissingMomentum::vectorEt() now
	returns a Vector3 rather than a double so that the transverse
	missing Et direction is also available.

	Only one data analysis has been affected by this change in
	behaviour: the D0_2004_S5992206 dijet delta(phi) analysis. It's